Disable the "OK" button of the review board export-dialog if no repository is selected.

Otherwise the user could submit the dialog which would lead to a crash
when we try to read the repository.

BUG: 304694